src/C_Code/basic_math.h

// src/C_Code/basic_math.h
#ifndef BASIC_MATH_H
#define BASIC_MATH_H

double c_add(double a, double b);
double c_subtract(double a, double b);
double c_multiply(double a, double b);
double c_divide(double a, double b);

#endif