src/CPP_Code/advanced_math.h

// src/CPP_Code/advanced_math.h
#ifndef ADVANCED_MATH_H
#define ADVANCED_MATH_H

extern "C" {
    double cpp_power(double base, double exponent);
    double cpp_sqrt(double x);
    double cpp_sin(double x);
    double cpp_cos(double x);
    double cpp_tan(double x);
    double cpp_log(double x);
}

#endif